--- a/ecommerce/ecom/package.json
+++ b/ecommerce/ecom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uiux",
+  "name": "ecom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
+    "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   },
   "dependencies": {
-    "@splidejs/splide": "^4.1.4",
-    "aos": "^3.0.0-beta.6"
+    "@splidejs/splide": "^4.1.4"
   }
 }
